gonna make this mine

--- a/css/style.css
+++ b/css/style.css
@@ -221,12 +221,12 @@ h5 {
 }
 
 .box-header.menu-is-open {
-    background-color: rgba(255, 255, 255, 0.96);
+    background-color: rgba(255, 255, 255, 0.96);7
 }
 
 .box-logo {
     display: block;
-    padding: 20px;
+    padding: px;
 }
 
 .box-primary-nav-trigger {
