--- a/css/style.css
+++ b/css/style.css
@@ -178,7 +178,7 @@ h5 {
 ==================================================*/
 
 .box-header {
-    position: sticky;
+    position: absolute;
     top: 0;
     left: 0;
     background: rgba(255, 255, 255, 0.95);
@@ -230,7 +230,6 @@ h5 {
 }
 
 .box-primary-nav-trigger {
-    
     position: absolute;
     right: 0;
     top: 0;
