--- a/MyNavcss.css
+++ b/MyNavcss.css
@@ -40,9 +40,9 @@ a {
   
     display: flex;
     /* flex-direction: row; */
-    background-color: rgb(255, 255, 255);
+    background-color: rgba(255, 255, 255, 255);
     box-shadow:
-    0 10px 10px rgba(0, 0, 0, 0.05);
+    0 2px 2px rgba(0, 0, 0, 0.05);
 
     justify-content: flex-end;
     align-items: center;
@@ -75,9 +75,9 @@ a {
 }
 
 .nav-link{
-    font-size: 1.6rem;
+    font-size: 1.2rem;
     
-    font-weight: 450;
+    font-weight: 40;
     color: #393939;
     text-transform: uppercase;
     
