--- a/css/style.css
+++ b/css/style.css
@@ -221,12 +221,12 @@ h5 {
 }
 
 .box-header.menu-is-open {
-    background-color: rgba(255, 255, 255, 0.96);
+    background-color: rgba(255, 255, 255, 0.96);7
 }
 
 .box-logo {
     display: block;
-    padding: 20px;
+    padding: px;
 }
 
 .box-primary-nav-trigger {
@@ -771,7 +771,7 @@ b i:last-child {
     display: inline-block;
     background-color: #ffbf00;
     padding: 5px 20px;
-    border-radius: 25px;
+    border-radius: 0px;
     color: #333;
     margin-top: 10px;
     -webkit-transform: translateX(-100px);
